# fplan

./: .gitignore  401k.toml  README.md  fplan.py  mmm.toml  pyproject.toml  sample.toml  torbul12.toml
examples/: mad.toml  mmm.toml  railroad.toml  sample.toml  sample_taxbrackets.toml  torbul12.toml
src/fplan/: __init__.py  fplan.py
test/fplan/test_load_file/: sample.toml  test_load_file.py
test/fplan/test_solve/: flat.toml  test_sample_solve.py
